# kerykeion

./: .clabot  .coveragerc  .env.example  .gitignore  ADVANCED_FEATURES_PLAN.md  BACKEND_MIGRATION_PLAN.md  CHANGELOG.md  COMPLETE_TEST_PLAN.md  CONTRIBUTING.md  DEVELOPMENT.md  FIXME.md  FIX_DECLUTTERING.md  IMPROVE.md  LIBEPHEMERIS_BACKEND.md  MANIFEST.in  MIGRATION_V4_TO_V5.md  Makefile  Pipfile  README.md  REFACTORY.md  RELEASE_NOTES.md  TEST.md  TEST_REFACTORY_PLAN.md  TODO.md  V6_INTEGRATION_REPORT.md  astrocore.py  geoname.sql  license  pyproject.toml  pyrightconfig.json  pytest.ini  readme.md  rename.py  reproduce_vertical_chart.py  requirements.txt  setup.cfg  setup.py  synastry.py  test.py  test_chart_titles.py  (+3 more)
.github/: FUNDING.yml
.github/workflows/: pypi-upload.yml  test.yml  v4-pypi-upload.yml
AUDIT/: AUDIT_GEMINI.md  GLM_AUDIT.md  GPT_AUDIT.md  OPUS_AUDIT.md
dart/: .flutter-plugins-dependencies  DEVELOPER_GUIDE.md  PROGRESS.md  TEST_RESULTS.md  analysis_options.yaml  pubspec.yaml  run_tests.sh
dart/.dart_tool/: package_config.json  package_graph.json  version
dart/example/: .metadata  README.md  pubspec.yaml
dart/lib/: kerykeion_dart.dart
dart/test/: api_integration_test.dart  aspects_logic_test.dart  aspects_test.dart  chart_data_test.dart  chart_draw_test.dart  extended_points_test.dart  full_test.dart  integration_test.dart  mcp_comparison_test.dart  python_reference.py  quick_test.dart  return_test.dart  sweph_test_v2.dart
dart/tool/: gen_test_svg.dart  generate_chart_assets.py
docs/: MIGRATION_REPORT_LIBEPHEMERIS.md  geoname.html  index.html  kerykeion.html  main.html  output_exemple.html  search.js
docs/kerykeion/: aspects.html  astrological_subject.html  charts.html  enums.html  main.html  (+12 more)
examples/: README.md  aspects_synastry.py  astrologiacal_subject.py  composite_report_example.py  context_serializer_example.py  current_time_report.py  dual_return_report_example.py  house_comparison_context_example.py  minimalist_chart_john_lennon.py  modern_chart_john_lennon.py  moon_phase_json_example.py  moon_phase_report_example.py  natal_report_example.py  planetary_return.py  quickstart_natal_chart.py  solar_return_report_example.py  subject_report_example.py  synastry_data_example.py  synastry_report_example.py  transit_report_example.py  transits_time_range.py  vertical_all_charts_example.py  vertical_birth_chart_example.py  vertical_chart_example.py
exemples/: Pipfile  create_chart.py  eg_create_chart.py  new-kr.config.json
kerykeion/: __init__.py  _predictive_utils.py  aspects.py  astrocore.py  astrological_subject.py  astrological_subject_factory.py  backword.py  chart_data_factory.py  composite_chart_data.py  composite_subject.py  composite_subject_factory.py  context_serializer.py  dangerous_json_dumper.py  enums.py  ephemeris_backend.py  ephemeris_data.py  ephemeris_data_factory.py  fetch_geonames.py  geoname.py  house_comparison.py  kerykeion_settings.py  kerykeion_subject.py  kr.config.json  kr_instance.py  llms.txt  main.py  output.py  output_exemple.py  planetary_return_factory.py  print_all_data.py  relationship_score.py  relationship_score_factory.py  relocated_chart_factory.py  report.py  swisseph_setup.py  synastry.py  synastry_old.py  transit_analysis.py  transits_time_range.py  transits_time_range_factory.py  (+2 more)
release_notes/: DRAFT.v5.0.0b1.md  V4.14.0.md  V4.16.0.md  V4.17.0.md  V4.19.0.md  V4.21.0.md  V4.22.0.md  V4.23.0.md  V4.24.0.md  V4.25.0.md  V4.26.0.md  v5.0.0.md  v5.0.0a1.md  v5.0.0b1.md  v5.1.0.md  v5.10.0.md  v5.11.0.md  v5.12.0.md  v5.3.0.md  v5.4.0.md  v5.5.0.md  v5.6.0.md  v5.7.0.md  v5.7.1.md  v6.0.0a1.md  v6.0.0a13.md  v6.0.0a14.md  v6.0.0a15.md  v6.0.0a2.md  v6.0.0a23.md  v6.0.0a25.md  v6.0.0a26.md  v6.0.0a3.md  v6.0.0a30.md  v6.0.0a32.md  v6.0.0a33.md  v6.0.0a34.md  v6.0.0a35.md  v6.0.0a36.md  v6.0.0a4.md  (+3 more)
scripts/: README.md  benchmark.py  check_documentation_coverage.py  docs.py  extract_swisseph_full_docs.py  generate_modern_baselines.py  generate_v6_test_gallery.py  quality_check.py  regenerate_all.py  regenerate_docs_charts.py  regenerate_expected_aspects.py  regenerate_expected_subjects.py  regenerate_report_snapshots.py  regenerate_stale_baselines.py  regenerate_synastry_aspects.py  regenerate_synastry_from_test.py  regenerate_test_charts.py  regenerate_test_charts_extended.py  regenerate_test_output.py  test_markdown_snippets.py
site-docs/: aspects.md  astrological_subject_factory.md  chart_data_factory.md  charts.md  composite_subject_factory.md  ephemeris_data_factory.md  house_comparison.md  planetary_return_factory.md  relationship_score_factory.md  report.md  transits_time_range_factory.md  utilities.md
site-examples/: birth-chart.md  chart-language.md  houses-systems.md  minimalist-charts-and-spect-table.md  perspective-type.md  report.md  sidereal-modes.md  synastry-chart.md  theming.md
test_utils/: README.md  regenerate_expected_aspects.py  regenerate_synastry_aspects.py  regenerate_synastry_from_test.py  regenerate_test_charts.py
tests/: Pipfile  __init__.py  conftest.py  test.py  test_all_active_points.py  test_aspects.py  test_astrological_subject.py  test_astrological_subject_jyotish.py  test_backward_compatibility.py  test_backword.py  test_chart_data_factory.py  test_chart_data_factory_complete.py  test_chart_drawer_complete.py  test_chart_drawer_missing_coverage.py  test_charts.py  test_composite_subject_factory_complete.py  test_context_serializer.py  test_coverage_boost.py  test_edge_cases.py  test_ephemeris_data.py  test_ephemeris_data_factory_complete.py  test_fetch_geonames.py  test_fetch_geonames_missing_coverage.py  test_json_dump.py  test_kr_instance.py  test_lunar_phase_details_factory.py  test_main.py  test_planetary_return_factory_complete.py  test_planetary_return_factory_missing_coverage.py  test_relationship_score.py  test_relationship_score_factory_complete.py  test_report.py  test_report_output.py  test_transits_time_range_factory_complete.py  test_utc.py  test_utilities.py  test_utilities_missing_coverage.py  tolerance_config.py
workspace/: README.md  main.py
(+473 files in other folders)
