[project]
name = "kerykeion"
version = "6.0.0a1"
authors = [
    { name = "Giacomo Battaglia", email = "kerykeion.astrology@gmail.com" }
]
description = "A Python library for astrological calculations, including natal charts, houses, planetary aspects, and SVG chart generation."
license = { text = "AGPL-3.0" }
readme = "README.md"
keywords = [
    "astrology",
    "astrology library",
    "astrology calculations",
    "astrology calculator",
    "natal chart",
    "birth chart",
    "planetary aspects",
    "astrology transits",
    "houses of astrology",
    "ephemeris",
    "zodiac",
    "zodiac signs",
    "svg charts",
    "synastry",
    "astronomical algorithms"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Religion",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "libephemeris>=1.0.0a4",
    "pydantic>=2.5",
    "scour>=0.38.2",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "simple-ascii-tables>=1.0.0",
    "pytz>=2024.2",
    "typing-extensions>=4.12.2",
]

[project.optional-dependencies]
swiss = ["pyswisseph>=2.10.3.1"]
all = ["pyswisseph>=2.10.3.1", "libephemeris>=1.0.0a4"]

[project.urls]
Homepage = "https://www.kerykeion.net/"
Repository = "https://github.com/g-battaglia/kerykeion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kerykeion"]

[tool.hatch.build.targets.sdist]
include = [
    "/kerykeion",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/MANIFEST.in",
]

# MyPy Static Analysis
[tool.mypy]
ignore_missing_imports = true
mypy_path = "kerykeion"
files = "kerykeion"

# PyTest Automated Testing
[tool.pytest.ini_options]
log_cli_level = 20
log_cli = true
testpaths = "tests"
log_level = 20
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
addopts = "-n 8"
markers = [
    "online: tests requiring network access (GeoNames API)",
    "core: hand-written essential tests with known values",
    "base: DE440s tier (1849-2150)",
    "medium: DE440 tier (1550-2650, cumulative)",
    "extended: DE441 tier (full range, cumulative)",
]

# Coverage Configuration
[tool.coverage.run]
source = ["kerykeion"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/sweph/*",  # Swiss Ephemeris library files
    "setup.py",
    "**/draw_planets_legacy.py",  # Legacy code, not used
    "kerykeion/charts/draw_planets_legacy.py",  # Legacy code, not used
    "kerykeion/kr_types/*",  # Deprecated v4 backward compat, excluded from coverage
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Task Runner
[tool.poe.tasks]

# ── Test suites (4 tiers: core < base < medium < extended) ──
[tool.poe.tasks."test:core"]
cmd = "pytest tests/core/ -m 'not online' --ignore=tests/core/test_houses_positions.py --ignore=tests/core/test_planetary_positions.py --ignore=tests/core/test_moon_phase_historical_verification.py --ignore=tests/core/test_subject_factory_parametrized.py --ignore=tests/core/test_chart_parametrized.py"
help = "Run core hand-written tests (fastest, default backend)"

[tool.poe.tasks."test:base"]
cmd = "pytest tests/ --tier=base -m 'not online'"
help = "Run base-tier tests (core + parametrized basics)"

[tool.poe.tasks."test:medium"]
cmd = "pytest tests/ --tier=medium -m 'not online'"
help = "Run medium-tier tests (base + house/planetary positions)"

[tool.poe.tasks."test:extended"]
cmd = "pytest tests/ -m 'not online'"
help = "Run extended-tier tests (all offline tests)"

[tool.poe.tasks."test:all"]
cmd = "pytest tests/ -m 'not online'"
help = "Run all tests (alias for test:extended)"

[tool.poe.tasks."test:all:cov"]
cmd = "pytest tests/ -m 'not online' --cov=kerykeion --cov-report=term-missing --cov-report=html"
help = "Run all tests with coverage report (terminal + htmlcov/)"

# ── Backend-specific test suites (identical tests, different ephemeris engine) ──
[tool.poe.tasks."test:lib"]
cmd = "pytest tests/core/ -m 'not online' --ignore=tests/core/test_backend_comparison.py --ignore=tests/core/test_houses_positions.py --ignore=tests/core/test_planetary_positions.py --ignore=tests/core/test_moon_phase_historical_verification.py --ignore=tests/core/test_subject_factory_parametrized.py --ignore=tests/core/test_chart_parametrized.py"
help = "Run core tests forced on libephemeris (KERYKEION_BACKEND=libephemeris)"
[tool.poe.tasks."test:lib".env]
KERYKEION_BACKEND = "libephemeris"

[tool.poe.tasks."test:swe"]
cmd = "pytest tests/core/ -m 'not online' --ignore=tests/core/test_backend_comparison.py --ignore=tests/core/test_houses_positions.py --ignore=tests/core/test_planetary_positions.py --ignore=tests/core/test_moon_phase_historical_verification.py --ignore=tests/core/test_subject_factory_parametrized.py --ignore=tests/core/test_chart_parametrized.py"
help = "Run core tests forced on swisseph (KERYKEION_BACKEND=swisseph)"
[tool.poe.tasks."test:swe".env]
KERYKEION_BACKEND = "swisseph"

[tool.poe.tasks."test:compare"]
cmd = "pytest tests/core/test_backend_comparison.py -v"
help = "Compare libephemeris vs swisseph (both must be installed via pip install kerykeion[all])"

# ── Coverage ──
[tool.poe.tasks."test:core:cov"]
cmd = "pytest tests/core/ -m 'not online' --ignore=tests/core/test_houses_positions.py --ignore=tests/core/test_planetary_positions.py --ignore=tests/core/test_moon_phase_historical_verification.py --ignore=tests/core/test_subject_factory_parametrized.py --ignore=tests/core/test_chart_parametrized.py --cov --cov-report=term-missing --cov-report=html"
help = "Core tests with coverage report"

[tool.poe.tasks."test:base:cov"]
cmd = "pytest tests/ --tier=base -m 'not online' --cov --cov-report=term-missing --cov-report=html"
help = "Base-tier tests with coverage report"

[tool.poe.tasks."test:medium:cov"]
cmd = "pytest tests/ --tier=medium -m 'not online' --cov --cov-report=term-missing --cov-report=html"
help = "Medium-tier tests with coverage report"

[tool.poe.tasks."test:extended:cov"]
cmd = "pytest tests/ -m 'not online' --cov --cov-report=term-missing --cov-report=html"
help = "Extended-tier tests with coverage report"

# ── Code Quality ──
[tool.poe.tasks.lint]
cmd = "ruff check"
help = "Lint code with ruff"

[tool.poe.tasks.format]
cmd = "ruff format"
help = "Format code with ruff"

[tool.poe.tasks."format:all"]
cmd = "ruff format kerykeion tests"
help = "Format all code (kerykeion + tests)"

[tool.poe.tasks.analyze]
cmd = "mypy"
help = "Static type analysis with mypy"

[tool.poe.tasks.typecheck]
cmd = "pyright"
help = "Static type checking with pyright"

[tool.poe.tasks.check]
sequence = ["lint", "analyze", "typecheck", "test:core"]
help = "Run all quality checks (lint, analyze, typecheck, test:core)"

[tool.poe.tasks.quality]
script = "scripts.quality_check:main"
help = "Run quality check script"

# Documentation
[tool.poe.tasks.docs]
cmd = "pdoc kerykeion -o ./docs"
help = "Generate API documentation"

[tool.poe.tasks."docs:check"]
cmd = "python scripts/check_documentation_coverage.py"
help = "Audit documentation coverage"

[tool.poe.tasks."docs:snippets"]
cmd = "python scripts/test_markdown_snippets.py"
help = "Test Python snippets in markdown files"

# Regenerate Golden Standards — one command per category
[tool.poe.tasks."regenerate:svg"]
sequence = ["regenerate:svg:base", "regenerate:svg:extended", "regenerate:svg:modern"]
help = "Regenerate all SVG chart baselines (tests/data/svg/)"

[tool.poe.tasks."regenerate:svg:base"]
cmd = "python scripts/regenerate_test_charts.py"

[tool.poe.tasks."regenerate:svg:extended"]
cmd = "python scripts/regenerate_test_charts_extended.py"

[tool.poe.tasks."regenerate:svg:modern"]
cmd = "python scripts/generate_modern_baselines.py"

[tool.poe.tasks."regenerate:reports"]
sequence = ["regenerate:reports:snapshots", "regenerate:reports:output"]
help = "Regenerate all report golden files (tests/fixtures/)"

[tool.poe.tasks."regenerate:reports:snapshots"]
cmd = "python scripts/regenerate_report_snapshots.py"

[tool.poe.tasks."regenerate:reports:output"]
cmd = "python scripts/regenerate_test_output.py"

[tool.poe.tasks."regenerate:positions"]
cmd = "python scripts/regenerate_all.py --positions --subjects"
help = "Regenerate expected positions and subjects (tests/data/expected_positions.py, expected_astrological_subjects.py)"

[tool.poe.tasks."regenerate:aspects"]
sequence = ["regenerate:aspects:natal", "regenerate:aspects:synastry", "regenerate:aspects:matrix"]
help = "Regenerate all expected aspects (tests/data/expected_*_aspects.py)"

[tool.poe.tasks."regenerate:aspects:natal"]
cmd = "python scripts/regenerate_expected_aspects.py"

[tool.poe.tasks."regenerate:aspects:synastry"]
cmd = "python scripts/regenerate_synastry_aspects.py"

[tool.poe.tasks."regenerate:aspects:matrix"]
cmd = "python scripts/regenerate_all.py --aspects"

[tool.poe.tasks."regenerate:all"]
sequence = ["regenerate:svg", "regenerate:reports", "regenerate:positions", "regenerate:aspects"]
help = "Regenerate all golden standards"

# Utilities
[tool.poe.tasks.clean]
cmd = "rm -rf dist build *.egg-info htmlcov .coverage .coverage.* coverage.xml .pytest_cache .mypy_cache .ruff_cache"
help = "Clean build artifacts and caches"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Enable pyflakes (F) and pycodestyle (E, W) rules
select = [
    "F",      # Pyflakes - logic errors, undefined names, unused imports
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
]

# Ignore rules that conflict with project structure
ignore = [
    "E402",   # Module level import not at top of file (needed for some modules)
    "E501",   # Line too long (handled by line-length setting)
    "E731",   # Do not assign a lambda expression, use a def (stylistic choice)
]

[tool.ruff.lint.per-file-ignores]
# Settings re-exports symbols intentionally
"kerykeion/settings/__init__.py" = ["F401", "F403"]
# Schemas re-exports for public API
"kerykeion/schemas/__init__.py" = ["F401", "F403"]
# Types re-exports for public API
"kerykeion/kr_types/__init__.py" = ["F405", "F403", "F401"]

# Pyright Static Type Checking
[tool.pyright]
include = ["kerykeion"]
exclude = [
    "tests",
    "examples",
    "workspace",
    "scripts",
    "**/__pycache__",
    ".venv",
    "dist",
    "build",
    "*.egg-info"
]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
reportOptionalMemberAccess = "none"
reportIncompatibleVariableOverride = "none"
reportArgumentType = "none"
reportInvalidTypeForm = "error"
reportAttributeAccessIssue = "error"
reportGeneralTypeIssues = "none"

[dependency-groups]
dev = [
    "coverage>=7.6.0",
    "mypy>=1.17.1",
    "pdoc>=15.0.4",
    "poethepoet>=0.36.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.12.9",
    "types-pytz>=2025.2.0.20250516",
    "types-requests>=2.32.4.20250611",
]
